MacViews: Fix broken hotkeys when permission dialog is showing.

BubbleDialogDelegate was failing to call SetAlwaysRenderAsActive() if the anchor
was set after the visibility callback.

This caused -[NativeWidgetMacNSWindow hasKeyAppearance] of the parent window to
return NO if a bubble window was key. This caused -[CommandDispatcher
bubbleParent] to return nil. And this caused keyEquivalents sent to bubbles to
fail to propagate to the parent window.

Bug: 844571
Change-Id: I20179a1f432a0cd363b334d6eede30736875f6f7
Reviewed-on: https://chromium-review.googlesource.com/1067860
Commit-Queue: Erik Chen <erikchen@chromium.org>
Reviewed-by: Trent Apted <tapted@chromium.org>
Reviewed-by: Avi Drissman <avi@chromium.org>
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Cr-Commit-Position: refs/heads/master@{#562872}
Former-commit-id: d8b301d1cf2685e29c1c6d6dacad7aacac8995d0